fix: refactoring, add empty HttpTaskServer